Performance improvements and bug fixes

--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/common/selection-search-panel.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/common/selection-search-panel.hbs
@@ -22,10 +22,7 @@
         <div class="panel-body">
             <div class="select-box">
                 <input type="search" id="{{searchId}}" class="selection-search-box form-control tabable" placeholder="{{placeholderText}}" title="Search box, {{placeholderText}}"></input>
-                <div class="value-container selection-search-results tabable" role="listbox" >
-                    {{#each searchResultOptions}}
-                    <input id="{{this}}" class="categorical-filter-input selectable list-item" type="checkbox" tabindex="-1" value="{{this}}" title="{{this}}" role="option"/>{{this}} <br />
-                    {{/each}}
+                <div class="value-container selection-search-results tabable" role="listbox">
                 </div>
             </div>
             <div class="select-box">
@@ -34,11 +31,7 @@
                     <button id="{{searchId}}-selection-clear-button" class="btn btn-default tabable">Clear</button>
                 </div>
                 <div class="panel-body results-box">
-                    <div class="value-container selections tabable">
-                        {{#each selectedResults}}
-                        <input class="categorical-filter-input selectable list-item" type="checkbox" tabindex="-1" value="{{this}}" role="option"/>{{this}} <br />
-                        {{/each}}
-                    </div>
+                    <div class="value-container selections tabable"></div>
                 </div>
             </div>
         </div>
