Decouple variant explorer from output panel

--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/output/variantTable.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/output/variantTable.hbs
@@ -1,4 +1,6 @@
-<table class="variantTable">
+<div id="variant-spinner"></div>
+<style scoped>th{width:auto !important; }</style> 
+<table id="vcfData" class="variantTable" class="display stripe">
     <thead>
     <tr>
         {{#each headers}}
