[ALS-4736] Add dataset management to user profile page (#133)

--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/dataset/dataset-save.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/dataset/dataset-save.hbs
@@ -12,8 +12,8 @@
         <div class="row"><div>Username:</div><div>{{username}}</div></div>
     </section>
     <div id="errors" class="alert alert-danger hidden center" role="alert"></div>
-    <section id="buttons" class="center block">
-        <a class="left btn btn-default" id="cancel-btn">Cancel</a>
-        <a class="right btn btn-default alternate" id="save-btn">Save Dataset ID</a>
+    <section id="buttons" class="row">
+        <div class="center col-lg-6"><button id="cancel-btn" class="btn btn-default">Cancel</button></div>
+        <div class="center col-lg-6"><button id="save-btn" class="btn btn-default alternate">Save Dataset ID</button></div>
     </section>
 </div>
