Add id to userprofile page dataset section so it can be hidden until feature is fully released for GIC.

--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/psamaui/user/userProfile.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/psamaui/user/userProfile.hbs
@@ -1,10 +1,10 @@
 <div id="user-profile">
-    <section class="panel panel-default">
+    <section class="panel panel-default" id="user-token-container">
         <div id="user-token-box" class="panel-body">
             <h3>Personalized Access Token</h3>
         </div>
     </section>
-    <section class="panel panel-default">
+    <section class="panel panel-default" id="dataset-management-container">
         <div id="dataset-management-box" class="panel-body">
             <h3>Dataset ID Management</h3>
         </div>
