More search ui updates

--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/filter/filter.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/filter/filter.hbs
@@ -1,4 +1,4 @@
-<div id="{{filterId}}" class="filter-row container">
+<div id="{{filterId}}" class="filter-row">
 	<div class="row">
         <div class="filter-edit">
             <div class="filter-qualifier col-md-3">
