--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/styles.css
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/styles.css
@@ -15,11 +15,15 @@
 }
 
 #main-content {
-     width: 80%;
+     width: 95%;
      position: relative;
      margin-top: 2em;
      margin-bottom: 2em;
      padding-bottom: 2em;
+}
+
+#query-builder h3 {
+    margin-top: 0;
 }
  #patient-count-box {
      line-height: 1;
@@ -31,8 +35,45 @@
 
 #selected-genomic-filter {
     margin: auto;
-    max-width: 650px;
 }
+
+#selected-genomic-filter h4 {
+	font-size: 18px;
+    color: black;
+}
+
+#selected-genomic-filter .panel {
+	border: none;
+}
+
+#selected-genomic-filter .panel .panel-heading {
+	border: none;
+	padding-left: 0;
+	padding-right: 0;
+}
+
+#selected-genomic-filter .panel .panel-heading.panel-extra-large {
+	padding: 0;
+}
+
+#selected-genomic-filter .panel .panel-body {
+	padding-left: 0;
+	padding-right: 0;
+}
+
+.panel {
+	border-color: var(--picsure-primary);
+}
+
+.panel-default>.panel-heading {
+    border-color: var(--picsure-primary);
+}
+
+.panel-default>.panel-heading {
+    color: #FFF;
+    background-color: var(--picsure-primary);
+}
+
 
 /************************* Outline Buttons ******************************/
 .btn-outline {
@@ -132,12 +173,14 @@
 
  #filter-list {
      width: 100%;
+     padding-top: 0;
 }
  .filter-list-entry {
      padding: 0;
 }
  .filter-row {
      width: 100%;
+
 }
  .filter-search-row {
      padding: 10px;
@@ -328,6 +371,8 @@
 
 .filter-result-saved {
     font-size: 1.2em;
+    border: 1px solid black;
+    border-radius: 0.5em;
 }
 
 .constrain-filter {
@@ -534,6 +579,7 @@ body {
 }
 .back-btn {
 	float: right;
+    margin: 5px;
 }
 .constrain-range-separator {
     width: unset;
@@ -554,11 +600,13 @@ body {
 .edit {
     padding: 6px 6px;
     width: unset;
-   float:right;
+    float:right;
+    margin: 5px;
 } 
 
 .delete {
     float: right;
+    margin: 5px;
 }
 
 .change-constraint {
@@ -1246,9 +1294,7 @@ input[type='checkbox'].categorical-filter-input {
     justify-content: start;
     align-items: end;
 }
-#search-controls > button:last-child {
-    margin-right: 11px;
-}
+
 #search-controls > *:not([type="reset"]):not(:last-child) {
     margin-right: 0.5em;
 }
