--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/output/outputPanel.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/output/outputPanel.hbs
@@ -1,4 +1,4 @@
-<div class="panel panel-defualt">
+<div class="panel panel-default">
 	<div class="panel-heading">
         <h4 class="panel-title">Results Panel</h4>
 	</div>
