--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/common/googleAnalytics.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/common/googleAnalytics.hbs
@@ -8,6 +8,32 @@
         gtag('js', new Date());
 
         gtag('config', '{{analyticsId}}');
+        
+        if(localStorage.getItem('consentMode') === null){
+            gtag('consent', 'default', {
+                'analytics_storage': 'denied',
+                'personalization_storage': 'denied',
+                'functionality_storage': 'denied',
+                'security_storage': 'denied',
+            });
+        } else {
+            gtag('consent', 'default', JSON.parse(localStorage.getItem('consentMode')));
+        }
+
+        <!-- Google Tag Manager -->
+        <script>
+        (function (w, d, s, l, i) {
+          w[l] = w[l] || [];
+          w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+          var f = d.getElementsByTagName(s)[0],
+            j = d.createElement(s),
+            dl = l != "dataLayer" ? "&l=" + l : "";
+          j.async = true;
+          j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+          f.parentNode.insertBefore(j, f);
+        })(window, document, "script", "dataLayer", "{{analyticsId}}");
+        </script>
+        <!-- End Google Tag Manager -->
     </script>
 {{/if}}
 </div>
