first pass at cookie consent banner

--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/analytics/googleAnalytics.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/analytics/googleAnalytics.hbs
@@ -13,6 +13,7 @@
             gtag('consent', 'default', {
                 'analytics_storage': 'denied',
                 'personalization_storage': 'denied',
+                'ad_storage': 'denied',
                 'functionality_storage': 'denied',
                 'security_storage': 'denied',
             });
