--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/styles.css
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/styles.css
@@ -1068,6 +1068,7 @@ input[type='checkbox'].categorical-filter-input {
 
 .value-container.selections {
     padding-top: 0px;
+    width: 100%;
 }
 
 .select-box .results-header .panel-title {
