[ALS-4918] New search interface; enable genomic filter modal (#136)
* Update search UI for better genomic searches

* More search ui updates

* fix sp, styles for baseline

* Hides genomic filter button when no data, bug fix

* Check if empty or undefined

* :angry:

* Update my bad boolean logic

* make sure info cols are loaded

* [ALS-5058]: Fix bug with selecting lots of items

* Update reset warning

* sanitize inputs

* Fix encoding

* ALS-1513

* Fix old genomic filtering not working with new way

* Fix ui issue and use arrow function

* remove urlencode as its done later

* Remove whitespace changes

* oxford comma

* spacing

* remove unused function

* Don't pass stuff when you don't need to

--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/common/mainLayout.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/common/mainLayout.hbs
@@ -1,23 +1,10 @@
-
-{{#if analyticsId}}
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id={{analyticsId}}"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', '{{analyticsId}}');
-</script>
-{{/if}}
-
-<div id="query-builder" class="col-md-8">
-    <div class="row">
-        <span class="query-builder-heading col-md-12">QUERY BUILDER</span>
-    </div>
-    <div class="row">
-        <span class="query-name col-md-11">&nbsp;&nbsp;</span>
-    </div>
-    <ul class="container" id="filter-list"></ul>
+<div id="query-builder" class="col-md-9">
+    <section id="phenotypic-filters-container">
+        <ul class="container" id="filter-list"></ul>
+    </section>
+	<hr class="no-top-margin">
+    <section id="genomic-filters-container">
+        <div id="selected-genomic-filter"></div>
+    </section>
 </div>
-<div id="query-results" class="col-md-4"></div>
+<div id="query-results" class="col-md-3"></div>
