--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/styles.css
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/styles.css
@@ -1,6 +1,7 @@
 :root {
     /*PIC-SURE Primary*/
-    --picsure-primary: #c4c4c4;
+    --picsure-primary: #c4b49c;
+    --picsure-primary-hover: #9c8f7c;
     --picsure-secondary: #848484;
     --picsure-alt: #c4b49c;
     --picsure-action: #c0143c;
@@ -16,21 +17,81 @@
 }
 
 #main-content {
-     width: 80%;
+     width: 95%;
      position: relative;
      margin-top: 2em;
      margin-bottom: 2em;
      padding-bottom: 2em;
 }
- #patient-count-box {
-     line-height: 1;
-     border-width: 1px;
-     border-style: solid;
-     border-color: lightgrey;
-     padding: 40px 0px;
-     background-color: rgb(223, 238, 255);
-     border-radius: 4px;
+
+.btn-primary {
+	background-color: var(--picsure-primary);
+	border-color: var(--picsure-primary);
 }
+
+.btn-primary:hover {
+	background-color: var(--picsure-primary-hover);
+	border-color: var(--picsure-primary-hover);
+}
+
+#query-builder h3 {
+    margin-top: 0;
+}
+ #patient-count-box {
+    line-height: 1;
+    padding-bottom: 16px;
+}
+
+#query-results .panel-heading {
+	text-align: center;
+	margin-bottom: 8px;
+}
+
+.no-top-margin {
+    margin-top: 0px;
+}
+
+#selected-genomic-filter {
+    margin: auto;
+}
+
+#selected-genomic-filter h4 {
+	font-size: 18px;
+    color: black;
+}
+
+#selected-genomic-filter .panel {
+	border: none;
+}
+
+#selected-genomic-filter .panel .panel-heading {
+	border: none;
+	padding-left: 0;
+	padding-right: 0;
+}
+
+#selected-genomic-filter .panel .panel-heading.panel-extra-large {
+	padding: 0;
+}
+
+#selected-genomic-filter .panel .panel-body {
+	padding-left: 0;
+	padding-right: 0;
+}
+
+.panel {
+	border-color: var(--picsure-primary);
+}
+
+.panel-default>.panel-heading {
+    border-color: var(--picsure-primary);
+}
+
+.panel-default>.panel-heading {
+    color: #FFF;
+    background-color: var(--picsure-primary);
+}
+
 
 /************************* Outline Buttons ******************************/
 .btn-outline {
@@ -130,16 +191,20 @@
 
  #filter-list {
      width: 100%;
+     padding-top: 0;
 }
  .filter-list-entry {
-     padding: 10px 10px 10px 10px;
+     padding: 0;
 }
  .filter-row {
      width: 100%;
+
 }
  .filter-search-row {
-     background-color: rgb(223, 238, 255);
      padding: 10px;
+}
+.filter-row .row {
+    margin: 0;
 }
 
  .filter-search {
@@ -328,6 +393,8 @@
 
 .filter-result-saved {
     font-size: 1.2em;
+    border: 1px solid black;
+    border-radius: 0.5em;
 }
 
 .constrain-filter {
@@ -496,10 +563,6 @@ body {
     margin-right: 0;
 }
 
-.search-box, .filter-search-box {
-    width: 80%;
-}
-
 .tab-pane {
     overflow-y: unset;
     max-height: unset;
@@ -538,6 +601,7 @@ body {
 }
 .back-btn {
 	float: right;
+    margin: 5px;
 }
 .constrain-range-separator {
     width: unset;
@@ -558,11 +622,13 @@ body {
 .edit {
     padding: 6px 6px;
     width: unset;
-   float:right;
+    float:right;
+    margin: 5px;
 } 
 
 .delete {
     float: right;
+    margin: 5px;
 }
 
 .change-constraint {
@@ -571,6 +637,7 @@ body {
 
 .search-tooltip-help-icon {
     float: left;
+    padding: 0 0 9px 0;
 }
 
 .anyvalueof-value-list {
@@ -1025,6 +1092,7 @@ input[type='checkbox'].categorical-filter-input {
 
 .value-container.selections {
     padding-top: 0px;
+    width: 100%;
 }
 
 .select-box .results-header .panel-title {
@@ -1270,6 +1338,10 @@ input[type='checkbox'].categorical-filter-input {
     margin-right: auto;
 }
 
+.space-even div:not(:last-child) {
+    margin-right: auto;
+}
+
 .take-space {
     flex: 1 0 auto;
     margin-right: 20px;
@@ -1313,3 +1385,112 @@ input[type='checkbox'].categorical-filter-input {
 .tree-select-container .panel-body .jstree-themeicon {
     display: none;
 }
+
+/* ==== Search ==== */
+
+.flex-container {
+    display: flex;
+    flex-direction: row;
+}
+
+.space-between {
+    justify-content: space-between;
+}
+
+#search-box {
+    display: inline;
+    vertical-align: bottom;
+}
+#search-button {
+    width:6em;
+}
+#genomic-filter-btn {
+    width:10em;
+}
+
+#search-controls {
+    width: 100%;
+}
+
+#search-controls:not([type="reset"]) {
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: end;
+}
+
+#search-controls > *:not([type="reset"]):not(:last-child) {
+    margin-right: 0.5em;
+}
+#search-controls > *:not([type="reset"]):not(:first-child):not(label) {
+    box-shadow: 0 0 10px 0 rgb(0 0 0 / 10%);
+}
+#search-controls > label:first-of-type:first-child {
+    margin-left: 1em;
+}
+#search-controls label {
+    align-self: center;
+}
+.reset-button {
+    align-self: center;
+}
+
+/************************* STARTS Search X/reset button ******************************/
+
+input[type="search"]::-webkit-search-cancel-button {
+    /* Remove default */
+    -webkit-appearance: none;
+    /* X image */
+    background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAAn0lEQVR42u3UMQrDMBBEUZ9WfQqDmm22EaTyjRMHAlM5K+Y7lb0wnUZPIKHlnutOa+25Z4D++MRBX98MD1V/trSppLKHqj9TTBWKcoUqffbUcbBBEhTjBOV4ja4l4OIAZThEOV6jHO8ARXD+gPPvKMABinGOrnu6gTNUawrcQKNCAQ7QeTxORzle3+sDfjJpPCqhJh7GixZq4rHcc9l5A9qZ+WeBhgEuAAAAAElFTkSuQmCC);
+    background-repeat: no-repeat;
+    background-size: 14px;
+    height: 14px;
+    width: 14px;
+    display: block;
+    cursor: pointer;
+}
+
+@supports selector(::-webkit-search-cancel-button) {
+    input[type="search"] > input[type="reset"],
+    input[type="search"] + input[type="reset"] {
+        display: none;
+    }
+}
+
+/* Firefox (A bug in Safari allows it to impact for Safari) */
+@supports not selector(::-webkit-search-cancel-button) {
+    input[type="search"] > input[type="reset"],
+    input[type="search"] + input[type="reset"] {
+        display: inline-block;
+        background-color: transparent;
+        background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAAn0lEQVR42u3UMQrDMBBEUZ9WfQqDmm22EaTyjRMHAlM5K+Y7lb0wnUZPIKHlnutOa+25Z4D++MRBX98MD1V/trSppLKHqj9TTBWKcoUqffbUcbBBEhTjBOV4ja4l4OIAZThEOV6jHO8ARXD+gPPvKMABinGOrnu6gTNUawrcQKNCAQ7QeTxORzle3+sDfjJpPCqhJh7GixZq4rHcc9l5A9qZ+WeBhgEuAAAAAElFTkSuQmCC);
+        background-repeat: no-repeat;
+        background-size: 14px;
+        height: 14px;
+        width: 14px;
+        padding: 4px;
+        z-index: 100;
+        cursor: pointer;
+        position: relative;
+        margin-right: -14px;
+        right: 35px;
+    }
+    #search-box:not(:valid) ~ input[type="reset"] {
+        visibility: hidden;
+    }
+}
+
+/* Safari 9+ (no impact to Chrome or Firefox)
+remove when above bug is fixed */
+@supports (-webkit-hyphens:none) {
+    input[type="search"] > input[type="reset"],
+    input[type="search"] + input[type="reset"] {
+        display: none;
+    }
+    #search-box:valid ~ #search-button,
+    #search-box:valid ~ #genomic-filter-btn {
+        position: static;
+    }
+}
+
+/************************* ENDS Search X ******************************/
