--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/styles.css
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/styles.css
@@ -1386,7 +1386,6 @@ input[type='checkbox'].categorical-filter-input {
     display: none;
 }
 
-<<<<<<< HEAD
 /* ==== Search ==== */
 
 .flex-container {
@@ -1495,29 +1494,32 @@ remove when above bug is fixed */
 }
 
 /************************* ENDS Search X ******************************/
-=======
-
 
 /* ==== Cookie prefs ==== */
 
 #cookie-consent-container {
     position: fixed;
     bottom: 35px;
-    left: 25%;
+    left: 5%;
     z-index: 1000;
-    max-width: 50%;
+    width: 90%;
 }
 
 #cookie-consent-banner {
     box-shadow: 0 0 10px 0 rgba(0,0,0,.2);
 }
 
-#cookie-consent-banner .cookie-consent-options {
+#cookie-consent-banner .cookie-banner-bottom {
     display: flex;
     flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#cookie-consent-banner .cookie-consent-options {
+    display: flex;
+    flex-direction: column;
     justify-content: center;
-    width: 100%;
-    padding: 10px;
 }
 
 #cookie-consent-banner .cookie-consent-options button, #cookie-consent-banner .cookie-consent-options input {
@@ -1525,5 +1527,8 @@ remove when above bug is fixed */
     padding: 10px;
     align-self: center;
 }
+
+#cookie-consent-banner .cookie-consent-options button:not(:last-child) {
+    margin-bottom: 10px;
+}
 /* ==== END Cookie prefs ==== */
->>>>>>> 9e10e2c (Styles and fixes for cookie dialog)
