--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/analytics/cookie-consent.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/analytics/cookie-consent.hbs
@@ -1,7 +1,7 @@
 <div id="cookie-consent-banner" class="panel panel-default">
     <div class="panel-body cookie-banner-bottom">
       <div>
-        <p>We use cookies to provide you with the best possible experience. They also allow us to analyze user behavior in order to constantly improve the website for you.</p>
+        <p>We use cookies to provide you with the best possible experience and to help us make the site more useful to visitors.</p>
         <p>To see how Google uses information from sites or apps that use our services click <a href="http://www.google.com/policies/privacy/partners/" target="_blank">here</a>.</p>
       </div>
       <div class="cookie-consent-options">
