Style updates and interface changes

--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/filter/filter.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/filter/filter.hbs
@@ -37,14 +37,14 @@
         <div class="filter-saved">
 		{{#unless anyRecordCategories}}
 		<div class="edit btn btn-default col-md-1">
-		    edit
+		    Edit
 		</div>
 		{{/unless}}
 		<div class="delete btn btn-default col-md-2">
-		    delete
+		    Delete
 		</div>
 		<div class="back-btn btn btn-default col-md-1">
-		    back
+		    Back
 		</div>
 
 		<div class="filter-qualifier">
