--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/common/tree-select.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/common/tree-select.hbs
@@ -1,5 +1,5 @@
-<div class="panel panel-default tree-select-container">
-    <div class="panel-heading space-out">
+<div class="panel panel-default tree-select-container ">
+    <div class="panel-heading space-out panel-extra-large">
         <h4 class="panel-title">{{title}}</h4>
         {{#if description}}
         <i class="fa fa-question-circle fa-lg tabable" aria-hidden="true" data-toggle="tooltip" data-placement="left" title="{{description}}"></i>
