[ALS-5134] Add Google Tag Manager

--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/analytics/googleAnalytics.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/analytics/googleAnalytics.hbs
@@ -1,4 +1,5 @@
 <div>
+<!--    Google Analytics and Google Tag Manager can be used independent of one another -->
 {{#if analyticsId}}
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id={{analyticsId}}"></script>
@@ -8,7 +9,7 @@
         gtag('js', new Date());
 
         gtag('config', '{{analyticsId}}');
-        
+
         if(localStorage.getItem('consentMode') === null){
             gtag('consent', 'default', {
                 'analytics_storage': 'denied',
@@ -20,7 +21,10 @@
         } else {
             gtag('consent', 'default', JSON.parse(localStorage.getItem('consentMode')));
         }
-
+    </script>
+{{/if}}
+{{#if tagManagerId}}
+    <script>
         <!-- Google Tag Manager -->
         (function (w, d, s, l, i) {
           w[l] = w[l] || [];
@@ -31,7 +35,7 @@
           j.async = true;
           j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
           f.parentNode.insertBefore(j, f);
-        })(window, document, "script", "dataLayer", "{{analyticsId}}");
+        })(window, document, "script", "dataLayer", "{{tagManagerId}}");
         <!-- End Google Tag Manager -->
     </script>
 {{/if}}
