--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/dataset/dataset-save.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/dataset/dataset-save.hbs
@@ -6,14 +6,14 @@
             <div>Dataset ID:</div>
             <div>
                 <span id="dataset-id">{{queryUUID}}</span>
-                <button id='copy-queryid-btn' class='btn btn-default alternate'>Copy</button>
+                <button id='copy-queryid-btn' class='btn btn-default alternate tabable'>Copy</button>
             </div>
         </div>
         <div class="row"><div>Username:</div><div>{{username}}</div></div>
     </section>
     <div id="errors" class="alert alert-danger hidden center" role="alert"></div>
     <section id="buttons" class="row">
-        <div class="center col-lg-6"><button id="cancel-btn" class="btn btn-default">Cancel</button></div>
-        <div class="center col-lg-6"><button id="save-btn" class="btn btn-default alternate">Save Dataset ID</button></div>
+        <div class="center col-lg-6"><button id="cancel-btn" class="btn btn-default tabable">Cancel</button></div>
+        <div class="center col-lg-6"><button id="save-btn" class="btn btn-default alternate tabable">Save Dataset ID</button></div>
     </section>
 </div>
