--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/dataset/dataset-view.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/dataset/dataset-view.hbs
@@ -17,7 +17,7 @@
         <div class="bordered"><ol id="detail-variables"></ol></div>
     </section>
     <section id="buttons" class="row">
-        <div class="center col-lg-6"><button id="cancel-btn" class="btn btn-default" tabindex="0" type="button">Cancel</button></div>
-        <div class="center col-lg-6"><button id="archive-btn" class="btn btn-default action" tabindex="0" type="button">Archive</button></div>
+        <div class="center col-lg-6"><button id="cancel-btn" class="btn btn-default tabable" tabindex="0" type="button">Cancel</button></div>
+        <div class="center col-lg-6"><button id="archive-btn" class="btn btn-default action tabable" tabindex="0" type="button">Archive</button></div>
     </section>
 </div>
