Add tabable class to save input.

--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/dataset/dataset-save.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/dataset/dataset-save.hbs
@@ -1,7 +1,7 @@
 <div id="named-dataset">
     <section id="dataset-query-info">
         <p>Fill out the following information to save your dataset ID for future use. To view and manage your dataset ID's, go to the "User Profile" tab.</p>
-        <div class="row"><div>Dataset ID Name:</div><div><input type="text" id="dataset-name" value="" /></div></div>
+        <div class="row"><div>Dataset ID Name:</div><div><input type="text" id="dataset-name" value="" class="tabable" /></div></div>
         <div class="row">
             <div>Dataset ID:</div>
             <div>
