--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/common/mainLayout.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/common/mainLayout.hbs
@@ -6,5 +6,8 @@
     <section id="genomic-filters-container">
         <div id="selected-genomic-filter"></div>
     </section>
+    <div id="tour-container">
+	    <button id="guide-me-button" class="btn big-button" tabindex="0" aria-label="You are on a button called 'Take a Tour' that opens a modal.">Take a Tour</button>
+    </div>
 </div>
 <div id="query-results" class="col-md-3"></div>
