--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/filter/filter.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/filter/filter.hbs
@@ -60,9 +60,10 @@
 	    <div class="category-valueof-div"></div>
     </div>
     <div class="constrain-filter"></div>
-	<div class="search-tabs"></div>
+	<div id="search-results-container" class="search-tabs"></div>
 	<br></br>
 	<div class="filter-boolean-operator row hidden">
 	<span>AND</span>
 	</div>
 </div>
+
