Refactoring the data-view page and some styles.

--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/dataset/dataset-save.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/dataset/dataset-save.hbs
@@ -1,10 +1,12 @@
 <div id="named-dataset">
     <section id="dataset-query-info">
         <p>Fill out the following information to save your dataset ID for future use. To view and manage your dataset ID's, go to the "User Profile" tab.</p>
-        <div class="row"><div>Dataset ID Name:</div><div><input type="text" id="dataset-name" value="" class="tabable" /></div></div>
-        <div class="row">
-            <div>Dataset ID:</div>
-            <div>
+        <div id="dataset-name-container" class="row">
+            <div class="title">Dataset ID Name:</div>
+            <div class="content"><input type="text" id="dataset-name" value="" class="tabable" /></div></div>
+        <div id="dataset-id-container" class="row">
+            <div class="title">Dataset ID:</div>
+            <div class="content">
                 <span id="dataset-id">{{queryUUID}}</span>
                 <button id='copy-queryid-btn' class='btn btn-default alternate tabable'>Copy</button>
             </div>
