baseline tour working

--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/common/mainLayout.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/common/mainLayout.hbs
@@ -7,7 +7,7 @@
         <div id="selected-genomic-filter"></div>
     </section>
     <div id="tour-container">
-	    <button id="guide-me-button" class="btn big-button" tabindex="0" aria-label="You are on a button called 'Take a Tour' that opens a modal.">Take a Tour</button>
+	    <button id="guide-me-button" class="btn btn-tertiary" tabindex="0" aria-label="You are on a button called 'Take a Tour' that opens a modal.">Take a Tour</button>
     </div>
 </div>
 <div id="query-results" class="col-md-3"></div>
