--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/filter/filter.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/filter/filter.hbs
@@ -60,7 +60,7 @@
 	    <div class="category-valueof-div"></div>
     </div>
     <div class="constrain-filter"></div>
-	<div id="search-results-container" class="search-tabs"></div>
+	<div id="search-results-container" data-intro="#search-results" data-sequence="3" class="search-tabs"></div>
 	<br></br>
 	<div class="filter-boolean-operator row hidden">
 	<span>AND</span>
