--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/filter/searchResultSubCategoriesContainer.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/filter/searchResultSubCategoriesContainer.hbs
@@ -1,7 +1,5 @@
 <div class="row subcat-row">
-    <ul class="nav nav-pills sub-nav-pills">
+    <ul class="nav nav-pills sub-nav-pills" data-intro="#search-results-sub-categories" data-sequence="5">
 		 <li data-toggle="showsub"><a>All Results</a></li>
-       
     </ul>
-
 </div>
