--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/output/outputPanel.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/output/outputPanel.hbs
@@ -1,17 +1,19 @@
-<div class="panel panel-default">
+<div class="panel panel-default" data-intro="#results-panel" data-sequence="8">
 	<div class="panel-heading">
-        <h4 class="panel-title">Results Panel</h4>
+		<h4 class="panel-title">Results Panel</h4>
 	</div>
 	<div id="patient-count-box">
 		<span class="center large" id="spinner-total">{{#if spinning}}{{> spinner spinnerClasses}}{{/if}}</span>
-		<span id="patient-count" class="blue center large">{{#if queryRan}}{{#if countDisplayOverride}}{{> (countDisplayOverride) totalPatients}}{{else}}{{outputPanel_obfuscate totalPatients}}{{/if}}{{else}}-{{/if}}</span><br></br>
+		<span id="patient-count" class="blue center large">{{#if queryRan}}{{#if countDisplayOverride}}
+			{{>(countDisplayOverride) totalPatients}}{{else}}{{outputPanel_obfuscate
+			totalPatients}}{{/if}}{{else}}-{{/if}}</span><br></br>
 		<span class="center medium">Total Participants</span><br></br>
 		<div class="container hidden" id="variant-data-container">
-			<a class="center btn btn-default" id="variant-data-btn">Variant Explorer</a>
+			<a class="center btn btn-default" id="variant-data-btn" data-intro="#variant-explorer" data-sequence="11">Variant Explorer</a>
 		</div>
 		<div class="container" id="pic-sure-instances">
-	<a class="center btn btn-default" id="select-btn">Select Data For Export</a>
-	<div id="select-spinner"></div>
+			<a class="center btn btn-default" id="select-btn" data-intro="#package-data" data-sequence="12">Select Data For Export</a>
+			<div id="select-spinner"></div>
 		</div>
 	</div>
 	<div id="concept-tree-div">
