--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/common/mainLayout.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/common/mainLayout.hbs
@@ -6,7 +6,7 @@
     <section id="genomic-filters-container">
         <div id="selected-genomic-filter"></div>
     </section>
-    <div id="tour-container">
+    <div id="tour-container" style="display: none;">
 	    <button id="guide-me-button" class="btn btn-tertiary" tabindex="0" aria-label="You are on a button called 'Take a Tour' that opens a modal.">Take a Tour</button>
     </div>
 </div>
