center the spinner a bit

--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/styles.css
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/styles.css
@@ -1561,6 +1561,10 @@ remove when above bug is fixed */
     background-color: rgba(16, 16, 16, 0.5);
 }
 
+.spinner-vert-center {
+    top: 25%;
+}
+
 #tour-container {
     display: flex;
     flex-direction: row;
