Update per code review.

--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/dataset/dataset-view.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/dataset/dataset-view.hbs
@@ -23,8 +23,8 @@
         </div>
     </section>
     <section id="buttons" class="row">
-        <div class="center"><button id="cancel-btn" class="btn btn-outline secondary tabable" tabindex="0" type="button">Cancel</button></div>
-        <div class="center"><button id="archive-btn" class="btn btn-outline action tabable" tabindex="0" type="button">Archive</button></div>
-        <div class="center"><button id="download-btn" class="btn btn-outline success tabable" tabindex="0" type="button">Download PDF</button></div>
+        <div class="center"><button id="dataset-view-cancel-btn" class="btn btn-outline secondary tabable" tabindex="0" type="button">Cancel</button></div>
+        <div class="center"><button id="dataset-view-archive-btn" class="btn btn-outline action tabable" tabindex="0" type="button">Archive</button></div>
+        <div class="center"><button id="dataset-view-download-btn" class="btn btn-outline success tabable" tabindex="0" type="button">Download PDF</button></div>
     </section>
 </div>
