--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/dataset/dataset-view.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/dataset/dataset-view.hbs
@@ -1,23 +1,30 @@
 <div id="dataset-view">
     <section id="detail-list">
-        <h4>Dataset ID Summary</h4>
-        <div class="bordered">
-            <div class="row">
-                <div class="col-lg-3"><span class="list-title">Dataset ID Name:</span></div>
-                <div class="col-lg-9" id="detail-summary-name"></div>
-            </div>
-            <div class="row">
-                <div class="col-lg-3"><span class="list-title">Dataset ID:</span></div>
-                <div class="col-lg-9" id="detail-summary-id"></div>
+        <div id="detail-summary-container">
+            <h4>Dataset ID Summary</h4>
+            <div class="bordered">
+                <div class="row">
+                    <div class="col-lg-3"><span class="list-title">Dataset ID Name:</span></div>
+                    <div class="col-lg-9" id="detail-summary-name"></div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-3"><span class="list-title">Dataset ID:</span></div>
+                    <div class="col-lg-9" id="detail-summary-id"></div>
+                </div>
             </div>
         </div>
-        <h4>Filters Applied</h4>
-        <div class="bordered"><ol id="detail-filters"></ol></div>
-        <h4>Additional Variables Included in Dataset</h4>
-        <div class="bordered"><ol id="detail-variables"></ol></div>
+        <div id="detail-filters-container">
+            <h4>Filters Applied</h4>
+            <div class="bordered"><ol id="detail-filters"></ol></div>
+        </div>
+        <div id="detail-variables-container">
+            <h4>Additional Variables Included in Dataset</h4>
+            <div class="bordered"><ol id="detail-variables"></ol></div>
+        </div>
     </section>
     <section id="buttons" class="row">
-        <div class="center col-lg-6"><button id="cancel-btn" class="btn btn-default tabable" tabindex="0" type="button">Cancel</button></div>
-        <div class="center col-lg-6"><button id="archive-btn" class="btn btn-default action tabable" tabindex="0" type="button">Archive</button></div>
+        <div class="center"><button id="dataset-view-cancel-btn" class="btn btn-outline secondary tabable" tabindex="0" type="button">Cancel</button></div>
+        <div class="center"><button id="dataset-view-archive-btn" class="btn btn-outline action tabable" tabindex="0" type="button">Archive</button></div>
+        <div class="center"><button id="dataset-view-download-btn" class="btn btn-outline success tabable" tabindex="0" type="button">Download PDF</button></div>
     </section>
 </div>
