refactoring and allow html to be passed to the dialog

--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/common/pic-sure-dialog-view.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/common/pic-sure-dialog-view.hbs
@@ -6,7 +6,7 @@
 </style>
 <div id="pic-sure-dialog" class="dialog-container">
     {{#each messages}}
-        <p>{{this}}</p>
+        <p>{{{this}}}</p>
     {{/each}}
     <div id="options" class="space-even"></div>
 </div>
