--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/styles.css
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/styles.css
@@ -3,6 +3,7 @@
     --picsure-primary: #c4b49c;
     --picsure-primary-hover: #9c8f7c;
     --picsure-secondary: #848484;
+    --picsure-ter: #675AFF;
     --picsure-alt: #c4b49c;
     --picsure-action: #c0143c;
     --picsure-other: #90a8a4;
