--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/styles.css
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/styles.css
@@ -3,6 +3,7 @@
     --picsure-primary: #c4b49c;
     --picsure-primary-hover: #9c8f7c;
     --picsure-secondary: #848484;
+    --picsure-ter: #675AFF;
     --picsure-alt: #c4b49c;
     --picsure-action: #c0143c;
     --picsure-other: #90a8a4;
@@ -33,6 +34,18 @@
 .btn-primary:hover {
     background-color: var(--picsure-primary-hover);
     border-color: var(--picsure-primary-hover);
+}
+
+.btn-tertiary {
+    background-color: var(--picsure-primary);
+	border-color: var(--picsure-primary);
+    color: #ffffff;
+}
+
+.btn-tertiary:hover {
+    background-color: var(--picsure-primary-hover);
+	border-color: var(--picsure-primary-hover);
+    color: #ffffff;
 }
 
 #query-builder h3 {
@@ -424,6 +437,10 @@
 
 .saved .filter-edit {
     display: none;
+}
+
+.filter-edit {
+    text-align: center;
 }
 
 .filter-result-saved {
@@ -1371,6 +1388,7 @@ input[type='checkbox'].categorical-filter-input {
     flex-direction: row;
     align-items: center;
     flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 
 .space-even section:not(:last-child) {
@@ -1571,3 +1589,27 @@ remove when above bug is fixed */
     margin-bottom: 10px;
 }
 /* ==== END Cookie prefs ==== */
+
+/* ==== Tour ==== */
+
+.loading {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(16, 16, 16, 0.5);
+}
+
+.spinner-vert-center {
+    top: 25%;
+}
+
+#tour-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+/* ==== END Tour ==== */
