--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/header/banner.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/header/banner.hbs
@@ -1,5 +1,5 @@
 {{#if bannerText}}
-    <div id="banner" style="{{bannerStyles}}">
+    <div id="banner_{{bannerCount}}" style="{{bannerStyles}}" class="{{bannerClass}}">
         {{{bannerText}}}
         {{#if isDismissible}}
         <span id="closeBannerWrapper" style="position: absolute; top: 10px; right: 10px; cursor: pointer;">
