--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/common/contact-widget.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/common/contact-widget.hbs
@@ -1,3 +1,3 @@
-{{#if contactWidget}}
+{{#if key}}
     <script data-jsd-embedded data-key="{{key}}" data-base-url="https://jsd-widget.atlassian.com" src="https://jsd-widget.atlassian.com/assets/embed.js"></script>
 {{/if}}
