Update consent text and make link configurable.

--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/analytics/cookie-consent.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/analytics/cookie-consent.hbs
@@ -2,7 +2,7 @@
     <div class="panel-body cookie-banner-bottom">
       <div>
         <p>We use cookies to provide you with the best possible experience and to help us make the site more useful to visitors.</p>
-        <p>To see how Google uses information from sites or apps that use our services click <a href="http://www.google.com/policies/privacy/partners/" target="_blank">here</a>.</p>
+        <p>To learn more, please visit our <a href="{{privacyPolicyLink}}" target="_blank">Privacy Policy</a>.</p>
       </div>
       <div class="cookie-consent-options">
         <button id="cookie-consent-accept-all" class="cookie-consent-button btn btn-primary">Accept</button>
