--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/psamaui/role/roleManagement.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/psamaui/role/roleManagement.hbs
@@ -6,6 +6,11 @@
         <button type="button" class="btn btn-info add-role-button">
           <span class="glyphicon glyphicon-plus"></span> Add Role
         </button>
+        {{#if showManualStudyButton}}
+        <button id="add-manual-study" type="button" class="btn btn-info" >
+          <span class="glyphicon glyphicon-plus"></span> Add Manual Study
+        </button>
+        {{/if}}
     </div>
     <br>
 	<div class="role-data col-md-12" >Fetching roles...</div>
