--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/header/banner.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/header/banner.hbs
@@ -3,7 +3,7 @@
         {{{bannerText}}}
         {{#if isDismissible}}
         <span id="closeBannerWrapper" style="position: absolute; top: 10px; right: 10px; cursor: pointer;">
-            <span id="closeBannerBtn">&times;</span>
+            <span id="closeBannerBtn" style="mix-blend-mode: difference; color: white;">&times;</span>
         </span>
         {{/if}}
     </div>
