[ALS-6378] More bugs in queryBuilder.js
- filters on same path not getting combined
- warning message for this behvior

--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/common/mainLayout.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/common/mainLayout.hbs
@@ -1,4 +1,7 @@
 <div id="query-builder" class="col-md-9">
+    <div class="" id="duplicate-query-warning" hidden>
+        You have queried the same concept path multiple times. The filters applied to these path(s) will be combined using the OR operator.
+    </div>
     <section id="phenotypic-filters-container">
         <ul class="container" id="filter-list"></ul>
     </section>
